# 10xAI-hello

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.backend-dev  Dockerfile.dev  Dockerfile.frontend-dev  MAKEFILE.md  Makefile  README.md  docker-compose.yml
backend/: TEST_SUMMARY.md  backend.cabal  stack.yaml
backend/src/: API.hs  Main.hs  Server.hs  User.hs  UserRepository.hs  UserService.hs
backend/test/: APITest.hs  IntegrationTest.hs  README.md  TestUtils.hs  UserRepositoryTest.hs  UserServiceTest.hs  UserTest.hs
frontend/: index.html  package.json  packages.dhall  spago.dhall
frontend/src/: Main.purs
frontend/src/Api/: UserApi.purs
frontend/src/Component/: UserForm.purs  UserList.purs
frontend/src/Data/: User.purs
