cabal-version:      3.0
name:               backend
version:            0.1.0.0
description:        Haskell backend with Scotty and tagless final style
license:            BSD-3-Clause
license-file:       LICENSE
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple
extra-source-files: CHANGELOG.md

executable backend
  main-is:            Main.hs
  other-modules:      User
                     UserService
                     UserRepository
                     API
                     Server
  build-depends:      base ^>=4.18,
                      scotty ^>=0.20,
                      text ^>=2.0,
                      aeson ^>=2.1,
                      mtl ^>=2.3,
                      transformers ^>=0.6,
                      http-types ^>=0.12,
                      wai ^>=3.2,
                      wai-cors ^>=0.2.7,
                      wai-extra ^>=3.1
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror

test-suite backend-tests
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  other-modules:      UserTest
                     UserRepositoryTest
                     UserServiceTest
                     APITest
                     IntegrationTest
                     TestUtils
  build-depends:      base ^>=4.18,
                      backend,
                      hspec ^>=2.10,
                      hspec-discover ^>=2.10,
                      QuickCheck ^>=2.14,
                      aeson ^>=2.1,
                      text ^>=2.0,
                      mtl ^>=2.3,
                      transformers ^>=0.6,
                      http-types ^>=0.12,
                      wai ^>=3.2,
                      wai-extra ^>=3.1,
                      scotty ^>=0.20
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror

